# swpp-2023-project-team-1

./: .gitignore  README.md
app/: build.gradle
backend/: .dockerignore  alembic.ini  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
backend/app/: main.py  session.py
backend/app/api/: api.py
backend/app/core/: config.py  conn.py
backend/app/models/: __init__.py  base.py  code.py  comment.py  guid.py  notification.py  post.py  post_like.py  timestamp_mixin.py  user.py
backend/app/repository/: code.py  comment.py  notification.py  post.py  user.py
backend/app/schemas/: __init__.py  auth.py  code.py  image.py  jwt.py  notification.py  post.py  user.py
backend/app/services/: auth_service.py  code_service.py  image_service.py  jwt_service.py  notification_service.py  post_service.py  user_service.py
backend/app/templates/: _styles.html  verification.html
backend/app/utils/: aws.py  code_helper.py  common.py  ecs_log.py  json_decoder.py  pagination.py  password_helper.py  token_helper.py  user.py
backend/docker/api/: Dockerfile  Dockerfile.local  Dockerfile.prod  startup.prod.sh  startup.sh
backend/migrations/: env.py
backend/migrations/versions/: 2023_10_11_0018-69d567bc401a_init_migration.py  2023_10_13_0358-06038909f041_define_user_model.py  2023_10_14_1520-f0a6a34a3a99_define_verifiction_code_model.py  2023_10_14_1925-991218a13c8f_define_post_related_models.py  2023_10_14_2335-18ad46387fbb_updated_post_models.py  2023_10_14_2345-d5ab610ff024_added_timedata_to_post_model.py  2023_10_15_0106-9b726a1f866e_added_timedata_to_comment_model.py  2023_10_15_0123-dc55c6de3e8a_added_timedata_to_postlike_model.py  2023_10_15_0206-68b90ca43141_edited_postlike_model_detail.py  2023_10_28_1724-cfc17af8302c_modify_models_relatied_to_feed.py  2023_10_28_1740-89697afa66b5_add_prompt_field_to_image_model.py  (+12 more)
backend/tests/: test_api.py  test_auth.py  test_base64.py  test_main.py  test_schema.py
(+314 files in other folders)
