[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sgeunhi <alsrb582@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
greenlet = "^3.0.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"

[tool.poetry.group.local.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
black = "^23.9.1"
flake8 = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
